--- a/pokemon-app/package.json
+++ b/pokemon-app/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "axios": "^0.21.1",
+    "babel-eslint": "^10.1.0",
+    "eslint-plugin-import": "^2.22.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -29,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint . --ext .ts --fix"
   },
   "eslintConfig": {
     "extends": [
