--- a/pokemon-app/package.json
+++ b/pokemon-app/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -32,7 +33,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint . --ext .ts --fix"
+    "lint": "eslint . --ext .ts"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +55,9 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
-    "eslint": "^7.23.0"
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
+    "eslint": "^7.23.0",
+    "eslint-plugin-react": "^7.23.1"
   }
 }
