--- a/pokemon-app/package.json
+++ b/pokemon-app/package.json
@@ -23,6 +23,7 @@
     "react-style": "^0.5.5",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "typescript": "^4.2.3",
